# rustyboy

./: .travis.yml  Cargo.toml  README.md  todo.md
src/: cartridge.rs  cpu.rs  debugger.rs  errors.rs  game_boy.rs  lib.rs  main.rs  utils.rs
src/cpu/: mod.rs  opcodes.rs  printer.rs
src/cpu/test/: alu.rs  inc.rs  jump.rs  load.rs  logic.rs  mod.rs  stack.rs
