[package]
name = "rustyboy"
version = "0.1.0"
authors = ["João Delgado <joaomtdelgado@gmail.com>", "Tiago Marques <samarques.tiago@gmail.com>"]

[dependencies]
clippy = { version = "*", optional = true }

[[bin]]
name = "rustyboy"
doc = false


[features]
verbose = []
debug = ["verbose"] # feature has no explicit dependencies
